@@ -21,11 +21,20 @@ collector=openstack_utilization
 reporter=grafana
 
 [machines_control]
-machine_baseline=10
+baseline=10
 
 [machines_control.plugins]
 vm_optimization=AI_consolidation
 vm_connector=openstack_migration
 pm_optimization=AI_power
 pm_connector=IPMI_power
+
+[plugins.openstack]
+openstack_auth_url=http://
+openstack_username=admin
+openstack_password=secret
+openstack_project_name=admin
+
+[plugins.grafana]
+grafana_url=http://localhost:3000
 
