@@ -1,39 +1,59 @@
 anyio==3.6.2
 build==0.10.0
 cachetools==5.3.0
+-e git+ssh://git@github.com/jaimeib/CEMS2.git@d5d5882df9adcf9938dc8495a3cfb2f4567b7fb2#egg=cems2
 certifi==2022.12.7
 chardet==5.1.0
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 configparser==5.3.0
+debtcollector==2.5.0
 distlib==0.3.6
 dnspython==2.3.0
 email-validator==2.0.0.post2
 fastapi==0.95.1
 filelock==3.12.0
+future==0.18.3
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.0
 httptools==0.5.0
 httpx==0.24.0
 idna==3.4
+iso8601==1.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+keystoneauth==0.5.0
+keystoneauth1==5.1.2
 MarkupSafe==2.1.2
+msgpack==1.0.5
+netaddr==0.8.0
+netifaces==0.11.0
 orjson==3.8.11
+os-service-types==1.7.0
+oslo.config==9.1.1
+oslo.i18n==6.0.0
+oslo.serialization==5.1.1
+oslo.utils==6.1.0
 packaging==23.1
 pbr==5.11.1
 platformdirs==3.5.0
 pluggy==1.0.0
 pydantic==1.10.7
 PyMySQL==1.0.3
+pyparsing==3.0.9
 pyproject_api==1.5.1
 pyproject_hooks==1.0.0
 python-dotenv==1.0.0
+python-ipmi==0.5.4
+python-keystoneclient==5.1.0
 python-multipart==0.0.6
+pytz==2023.3
 PyYAML==6.0
 requests==2.30.0
+rfc3986==2.0.0
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.12
 starlette==0.26.1
@@ -48,3 +68,4 @@ uvloop==0.17.0
 virtualenv==20.23.0
 watchfiles==0.19.0
 websockets==11.0.2
+wrapt==1.15.0
